[package]
name = "awc_client_timeout"
version = "0.1.0"
authors = ["Alexey Fedorov <lexxfedoroff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1.1.1"
awc = "1.0.1"
